[gd_scene load_steps=13 format=3 uid="uid://pjpwpdw1euxj"]

[ext_resource type="Script" uid="uid://ctv8fmm48e327" path="res://saves/scripts/load_screen.gd" id="1_ukmtt"]
[ext_resource type="Texture2D" uid="uid://32ixlvv01yja" path="res://assets/Cards/CardTemplateColor.png" id="2_7wf1t"]
[ext_resource type="Theme" uid="uid://bvcwux0exg1y0" path="res://main_theme.tres" id="3_7wf1t"]
[ext_resource type="Texture2D" uid="uid://veel70mhljxe" path="res://assets/Cards/CardTemplateRock.png" id="3_t4s8f"]
[ext_resource type="Texture2D" uid="uid://5d71lefj5ebi" path="res://assets/Cards/CardTemplatePaper.png" id="4_wk2in"]
[ext_resource type="Shader" uid="uid://dn521yloucwqc" path="res://combat/transition.gdshader" id="4_wvt8u"]
[ext_resource type="Texture2D" uid="uid://py2u3rw43m37" path="res://combat/assets/transistion_1.png" id="5_ghqf1"]
[ext_resource type="Script" uid="uid://compt40rdgudv" path="res://saves/scripts/loading.gd" id="6_t4s8f"]
[ext_resource type="Texture2D" uid="uid://bolbxpilc7fm" path="res://assets/sprites/TrashCan.png" id="6_wk2in"]
[ext_resource type="Texture2D" uid="uid://baunnldtvgpp0" path="res://icon.svg" id="7_wk2in"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j22as"]
light_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xu433"]
shader = ExtResource("4_wvt8u")
shader_parameter/fill = -0.1

[node name="LoadScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukmtt")

[node name="File1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 120.0
offset_right = 368.0
offset_bottom = 632.0
texture_normal = ExtResource("2_7wf1t")
texture_pressed = ExtResource("3_t4s8f")
texture_hover = ExtResource("4_wk2in")
stretch_mode = 0

[node name="Name" type="Label" parent="File1"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 88.0
theme = ExtResource("3_7wf1t")
theme_override_font_sizes/font_size = 30
text = "SaveFile1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delete1" type="TextureButton" parent="File1"]
layout_mode = 0
offset_left = 40.0
offset_top = 176.0
offset_right = 64.0
offset_bottom = 200.0
texture_normal = ExtResource("6_wk2in")
ignore_texture_size = true
stretch_mode = 0

[node name="DeletedStatus1" type="Label" parent="File1"]
visible = false
layout_mode = 0
offset_left = 66.0
offset_top = 187.0
offset_right = 165.0
offset_bottom = 209.0
theme = ExtResource("3_7wf1t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Save deleted"

[node name="File2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 120.0
offset_right = 712.0
offset_bottom = 632.0
texture_normal = ExtResource("2_7wf1t")
texture_pressed = ExtResource("3_t4s8f")
texture_hover = ExtResource("4_wk2in")
stretch_mode = 0

[node name="Name" type="Label" parent="File2"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 88.0
theme = ExtResource("3_7wf1t")
theme_override_font_sizes/font_size = 30
text = "SaveFile2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delete2" type="TextureButton" parent="File2"]
layout_mode = 0
offset_left = 40.0
offset_top = 176.0
offset_right = 64.0
offset_bottom = 200.0
texture_normal = ExtResource("6_wk2in")
ignore_texture_size = true
stretch_mode = 0

[node name="DeletedStatus2" type="Label" parent="File2"]
visible = false
layout_mode = 0
offset_left = 66.0
offset_top = 187.0
offset_right = 165.0
offset_bottom = 209.0
theme = ExtResource("3_7wf1t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Save deleted"

[node name="File3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 784.0
offset_top = 128.0
offset_right = 1040.0
offset_bottom = 640.0
texture_normal = ExtResource("2_7wf1t")
texture_pressed = ExtResource("3_t4s8f")
texture_hover = ExtResource("4_wk2in")
stretch_mode = 0

[node name="Name" type="Label" parent="File3"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 88.0
theme = ExtResource("3_7wf1t")
theme_override_font_sizes/font_size = 30
text = "SaveFile3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delete3" type="TextureButton" parent="File3"]
layout_mode = 0
offset_left = 40.0
offset_top = 176.0
offset_right = 64.0
offset_bottom = 200.0
texture_normal = ExtResource("6_wk2in")
ignore_texture_size = true
stretch_mode = 0

[node name="DeletedStatus3" type="Label" parent="File3"]
visible = false
layout_mode = 0
offset_left = 66.0
offset_top = 187.0
offset_right = 165.0
offset_bottom = 209.0
theme = ExtResource("3_7wf1t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Save deleted"

[node name="Back" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_j22as")
layout_mode = 0
offset_left = 16.0
offset_top = 584.0
offset_right = 192.0
offset_bottom = 633.0
theme = ExtResource("3_7wf1t")
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 24.0
offset_right = 1024.0
offset_bottom = 136.0
theme = ExtResource("3_7wf1t")
theme_override_font_sizes/font_size = 45
text = "Choose   a   save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Loading" type="CanvasLayer" parent="."]
visible = false

[node name="Transition" type="TextureRect" parent="Loading"]
material = SubResource("ShaderMaterial_xu433")
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("5_ghqf1")
script = ExtResource("6_t4s8f")

[node name="Label" type="Label" parent="Loading"]
visible = false
offset_left = 352.0
offset_top = 16.0
offset_right = 776.0
offset_bottom = 184.0
theme = ExtResource("3_7wf1t")
theme_override_font_sizes/font_size = 60
text = "LOADING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="Loading"]
visible = false
position = Vector2(744, 96)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_wk2in")

[connection signal="button_pressed" from="." to="Loading/Transition" method="_on_control_button_pressed"]
[connection signal="pressed" from="File1" to="." method="_on_file_1_pressed"]
[connection signal="pressed" from="File1/Delete1" to="." method="_on_delete_1_pressed"]
[connection signal="pressed" from="File2" to="." method="_on_file_2_pressed"]
[connection signal="pressed" from="File2/Delete2" to="." method="_on_delete_2_pressed"]
[connection signal="pressed" from="File3" to="." method="_on_file_3_pressed"]
[connection signal="pressed" from="File3/Delete3" to="." method="_on_delete_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
